<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:background="@drawable/shape_sign_in_button"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_text"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_google"
            android:layout_margin="20dp"
            android:background="@drawable/shape_google_button"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="signUp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sign_up"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>